# Gemini-Applications

./: 1-app.py  10-summarizer.py  2-vision.py  3-qachat.py  4-invoice-extractor.py  5-chatpdf.py  6-documentqa.py  7-text2sql.py  8-ats.py  9-health.py  README.md  main.py  pyproject.toml  requirements.txt  sql.py  student.db
crewai/: agents.py  crew.py  tasks.py  tools.py
crewai/gemini/: crew.py  tools.py
faiss_index/: index.faiss  index.pkl
